# wellness-agent

./: .env.example  .gitignore  AI Wellness Agent Design - Based on Google ADK.md  CHANGELOG.md  CONTRIBUTING.md  FRONTEND_INTEGRATION.md  GOVERNANCE.md  LICENSE  MEMORY_IMPLEMENTATION.md  README.md  SECURITY.md  SUPPORT.md  TESTING_GUIDE.md  User-Journey.md  Wellness Agent Implementation Analysis.md  check_gcs_auth.py  pyproject.toml  requirements.txt  run_dev_server.py  setup_mock_data.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
deployment/: deploy.py  test_deployment.py
eval/: test_eval.py
eval/data/: basic.test.json
frontend/: INTEGRATION_GUIDE.md  SIMPLIFIED_SETUP.md  middleware.ts  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/(auth)/: auth.ts
frontend/components/: app-sidebar.tsx  chat-header.tsx  chat.tsx  code-block.tsx  icons.tsx  markdown.tsx  message.tsx  messages.tsx  multimodal-input.tsx  role-selector.tsx  sidebar-history.tsx  sidebar-user-nav.tsx  suggested-actions.tsx
frontend/public/: app.js  index.html  styles.css
mock_db/: accommodation_plans.json  leave_requests.json  setup_firestore.py  setup_storage.py
tests/: test_agents.py
wellness_agent/: agent.py  llm_config.py  prompts.py  server.py  tool_handlers.py  tools.py
wellness_agent/db/: __init__.py  bigquery.py  firestore.py  test_connection.py
wellness_agent/privacy/: __init__.py  anonymizer.py  callbacks.py
wellness_agent/services/: __init__.py  accommodation_service.py  analytics_service.py  db_service.py  organization_service.py  service_factory.py  symptom_service.py
(+45 files in other folders)
